--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@reduxjs/toolkit": "^2.2.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^7.13.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.4",
